--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.2.1",
+    "antd": "^3.20.7",
     "axios": "^0.19.0",
     "massive": "^5.11.2",
     "react": "^16.8.6",
