--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cometchat-pro/chat": "^1.8.5",
     "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
     "antd": "^3.20.7",
     "axios": "^0.19.0",
     "massive": "^5.11.2",
