--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.19.0",
     "massive": "^5.11.2",
     "react": "^16.8.6",
+    "react-big-calendar": "^0.22.0",
+    "react-calendar": "^2.19.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
