--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^3.20.7",
     "axios": "^0.19.0",
     "massive": "^5.11.2",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-big-calendar": "^0.22.0",
     "react-calendar": "^2.19.1",
