--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@material-ui/icons": "^4.2.1",
     "antd": "^3.20.7",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "massive": "^5.11.2",
     "moment": "^2.24.0",
     "react": "^16.8.6",
