--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "csv-parser": "^2.3.0",
+    "csv-writer": "^1.5.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
