Finally doing this thing long AF overdue. JUDAS PRIEST I'M SO BAD

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-calendar": "^2.19.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.1",
     "reactjs-popup": "^1.4.2",
     "shards-react": "^1.0.3",
     "typeface-roboto": "^0.0.75"
